# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("inputmethodengine_native_config") {
  visibility = [ ":*" ]
    include_dirs = [
      "include",
    ]

}

config("inputmethodengine_native_public_config") {
  visibility = []
  include_dirs = [ "include" ]
}

ohos_shared_library("inputmethodengine") {
  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
  ]

  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [ "js_input_method_engine.cpp" ]

  configs = [ ":inputmethodengine_native_config" ]

  deps = [
    "//base/miscservices/inputmethod/frameworks/inputmethod_ability:inputmethod_ability",
    "//foundation/ace/napi/:ace_napi",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//utils/native/base:utils",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/intent:intent",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event:mmi_event",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
    "//foundation/multimodalinput/input/interfaces/native/innerkits/event:mmi_event",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//base/miscservices/inputmethod/services:inputmethod_service",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "miscservices"
  part_name = "inputmethod_native"
}
