# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("inputmethodengine_native_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

config("inputmethodengine_native_public_config") {
  visibility = []
  include_dirs = [ "include" ]
}

ohos_shared_library("inputmethodengine") {
  sources = [
    "//base/inputmethod/imf/services/src/global.cpp",
    "src/input_method_engine_module.cpp",
    "src/js_input_method_engine.cpp",
    "src/js_input_method_engine_listener.cpp",
    "src/js_input_method_engine_registry.cpp",
    "src/js_input_method_engine_utils.cpp",
    "src/js_keyboard_controller.cpp",
    "src/js_keyboard_delegate.cpp",
    "src/js_text_input_client.cpp",
  ]

  configs = [ ":inputmethodengine_native_config" ]

  deps = [
    "${ability_runtime_inner_api_path}/ability_manager:ability_manager",
    "${ability_runtime_inner_api_path}/app_manager:app_manager",
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//base/inputmethod/imf/frameworks/inputmethod_ability:inputmethod_ability",
    "//base/inputmethod/imf/services:inputmethod_service",
    "//foundation/arkui/napi/:ace_napi",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_single:ipc_single",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  public_configs = [ ":inputmethodengine_native_public_config" ]

  relative_install_dir = "module"
  subsystem_name = "inputmethod"
  part_name = "imf"
}
